k8s/flux/apps/slingshot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slingshot
  annotations:
    helm.sh/resource-policy: keep
  labels:
    app: slingshot
spec:
  type: ClusterIP
  selector:
    app: slingshot
  ports:
    - name: http
      port: 80
      targetPort: http
