k8s/flux/apps/slingshot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slingshot
  annotations:
    helm.sh/resource-policy: keep
  labels:
    app: slingshot
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "slingshot.cute.haus"
      secretName: cute-haus-tls
  rules:
    - host: "slingshot.cute.haus"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: slingshot
                port:
                  number: 80
